<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgeActivity">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="20dp"
                android:text="10대 인기 코스"
                android:textSize="20dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/first_button_10"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/pig1"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/first_button_10"
                    />

                <ImageButton
                    android:id="@+id/second_button_10"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/pig3"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/second_button_10"
                    />

                <ImageButton
                    android:id="@+id/third_button_10"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/pig2"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:contentDescription="@string/third_button_10"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="20dp"
                android:text="20대 인기 코스"
                android:textSize="20dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/first_button_20"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/pig1"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/first_button_20"
                    />

                <ImageButton
                    android:id="@+id/second_button_20"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/pig3"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/second_button_20"
                    />

                <ImageButton
                    android:id="@+id/third_button_20"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/pig2"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:contentDescription="@string/third_button_20"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="20dp"
                android:text="30대 인기 코스"
                android:textSize="20dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/first_button_30"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/pig1"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/first_button_30"
                    />

                <ImageButton
                    android:id="@+id/second_button_30"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/pig3"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/second_button_30"
                    />

                <ImageButton
                    android:id="@+id/third_button_30"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/pig2"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:contentDescription="@string/third_button_30"
                    />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>