<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragHome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/nasqua"
                android:text="장소"

                android:textColor="#FF0066"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@id/imageButton1"
                app:layout_constraintEnd_toEndOf="@id/imageButton1"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/imageButton1"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="90dp"
                android:background="#FFFFFF"
                android:contentDescription="@string/imageButton1"

                android:scaleType="fitXY"
                android:src="@drawable/cafe"
                app:layout_constraintEnd_toStartOf="@id/imageButton2"
                app:layout_constraintHorizontal_bias="0.15"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/sea"
                android:text="카페"
                android:textColor="#000000"

                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="@+id/imageButton1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/imageButton1"
                app:layout_constraintTop_toBottomOf="@+id/imageButton1" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="90dp"
                android:background="#FFFFFF"

                android:contentDescription="@string/imageButton2"
                android:scaleType="fitXY"
                android:src="@drawable/plate"

                app:layout_constraintEnd_toStartOf="@+id/imageButton3"
                app:layout_constraintStart_toEndOf="@id/imageButton1"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/sea"
                android:text="식당"
                android:textColor="#000000"

                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="@id/imageButton2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/imageButton2"
                app:layout_constraintTop_toBottomOf="@id/imageButton2" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="90dp"
                android:background="#FFFFFF"

                android:contentDescription="@string/imageButton3"
                android:scaleType="fitXY"
                android:src="@drawable/beer"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageButton2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/sea"
                android:text="술"
                android:textColor="#000000"

                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="@id/imageButton3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/imageButton3"
                app:layout_constraintTop_toBottomOf="@id/imageButton3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="코스"
                android:textSize="30sp"
                android:textColor="#FF0066"
                android:fontFamily="@font/nasqua"

                app:layout_constraintEnd_toEndOf="@id/imageButton4"
                app:layout_constraintStart_toStartOf="@id/imageButton4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/imageButton4"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="15dp"/>


            <ImageButton
                android:id="@+id/imageButton4"
                android:background="#FFFFFF"
                android:src="@drawable/course"
                android:scaleType="fitXY"
                android:layout_width="60dp"
                android:layout_height="60dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/imageButton5"

                android:layout_marginTop="70dp"
                app:layout_constraintHorizontal_bias="0.15"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/imageButton4"/>

            <TextView
                android:id="@+id/textView3"
                android:text="코스 만들기!"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:fontFamily="@font/sea"

                app:layout_constraintTop_toBottomOf="@id/imageButton4"
                app:layout_constraintEnd_toEndOf="@id/imageButton4"
                app:layout_constraintStart_toStartOf="@id/imageButton4"
                app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginTop="15dp"/>

            <ImageButton
                android:id="@+id/imageButton5"
                android:background="#FFFFFF"
                android:src="@drawable/feedback"
                android:scaleType="fitXY"
                android:layout_width="60dp"
                android:layout_height="60dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageButton4"
                app:layout_constraintEnd_toStartOf="@id/imageButton6"

                android:layout_marginTop="70dp"
                android:layout_marginLeft="5dp"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/imageButton5"
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sea"
                android:textSize="20dp"
                android:text="코스 추천!"
                android:textColor="#000000"


                app:layout_constraintEnd_toEndOf="@id/imageButton5"
                app:layout_constraintStart_toStartOf="@id/imageButton5"
                app:layout_constraintTop_toBottomOf="@id/imageButton5"
                android:layout_marginTop="15dp"/>

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="#FFFFFF"
                android:src="@drawable/random"
                android:scaleType="fitXY"

                app:layout_constraintStart_toEndOf="@id/imageButton5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:layout_marginTop="70dp"
                android:layout_marginLeft="5dp"
                android:contentDescription="@string/imageButton6"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="랜덤 코스"
                android:textSize="20sp"
                android:textColor="#000000"
                android:fontFamily="@font/sea"

                app:layout_constraintStart_toStartOf="@+id/imageButton6"
                app:layout_constraintEnd_toEndOf="@id/imageButton6"
                app:layout_constraintTop_toBottomOf="@id/imageButton6"
                app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginTop="15dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>